[package]
name = "pirtis-rocket"
version = "0.1.0"
authors = ["Ignas Andriuškevičius <63236361+ignasandr@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
